--- a/scrape/Dockerfile
+++ b/scrape/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.6
 
+RUN pip3 install --no-cache-dir Scrapy
+
 ADD requirements.txt /app/requirements.txt
 RUN pip3 install --no-cache-dir -r /app/requirements.txt
 
